fix: remove gap from flex-container

--- a/projects/common/src/styles/mixins/flex-container.mixin.scss
+++ b/projects/common/src/styles/mixins/flex-container.mixin.scss
@@ -1,14 +1,7 @@
-@mixin flex-container(
-  $flex-direction: row,
-  $align-items: normal,
-  $justify-content: normal,
-  $flex-wrap: nowrap,
-  $gap: normal
-) {
+@mixin flex-container($flex-direction: row, $align-items: normal, $justify-content: normal, $flex-wrap: nowrap) {
   display: flex;
   flex-direction: $flex-direction;
   align-items: $align-items;
   justify-content: $justify-content;
   flex-wrap: $flex-wrap;
-  gap: $gap;
 }
